blueprints/wholesale-ecommerce-b2b/salesforce/force-app/main/default/objects/Account/fields/Account_status__c.field-meta.xml
<CustomField>
    <fullName>Account_status__c</fullName>
    <description>Where the retailer is in its life with us. Drives views and reorder chasing.</description>
    <label>Account status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>At risk</fullName>
            </value>
            <value>
                <fullName>Lapsed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>