blueprints/wholesale-ecommerce-b2b/salesforce/force-app/main/default/objects/Account/fields/Credit_limit__c.field-meta.xml
<CustomField>
    <fullName>Credit_limit__c</fullName>
    <description>Maximum unpaid balance allowed, set by finance after a credit check.</description>
    <label>Credit limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>