blueprints/wholesale-ecommerce-b2b/salesforce/force-app/main/default/objects/Account/fields/First_order_date__c.field-meta.xml
<CustomField>
    <fullName>First_order_date__c</fullName>
    <description>Date of the account's first order. Set by automation.</description>
    <label>First order date</label>
    <type>Date</type>
</CustomField>