blueprints/wholesale-ecommerce-b2b/salesforce/force-app/main/default/objects/Account/fields/Last_order_date__c.field-meta.xml
<CustomField>
    <fullName>Last_order_date__c</fullName>
    <description>Date of the most recent order. Set by automation. Used to spot lapsing accounts.</description>
    <label>Last order date</label>
    <type>Date</type>
</CustomField>