blueprints/wholesale-ecommerce-b2b/salesforce/force-app/main/default/objects/Account/fields/Lead_source__c.field-meta.xml
<CustomField>
    <fullName>Lead_source__c</fullName>
    <description>How the retailer first came to us. Set once and never overwritten.</description>
    <label>Lead source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trade show</fullName>
            </value>
            <value>
                <fullName>Inbound enquiry</fullName>
            </value>
            <value>
                <fullName>Rep outreach</fullName>
            </value>
            <value>
                <fullName>Showroom</fullName>
            </value>
            <value>
                <fullName>Wholesale marketplace</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>