blueprints/wholesale-ecommerce-b2b/salesforce/force-app/main/default/objects/Account/fields/Lifetime_orders__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_orders__c</fullName>
    <description>Count of orders placed. A count of one means the retailer has not yet reordered.</description>
    <label>Orders to date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>