blueprints/wholesale-ecommerce-b2b/salesforce/force-app/main/default/objects/Account/fields/Payment_terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_terms__c</fullName>
    <description>Payment terms agreed with the retailer. New accounts usually start on payment with order.</description>
    <label>Payment terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pay on order</fullName>
            </value>
            <value>
                <fullName>Net 30</fullName>
            </value>
            <value>
                <fullName>Net 60</fullName>
            </value>
            <value>
                <fullName>Credit hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>