blueprints/wholesale-ecommerce-b2b/salesforce/force-app/main/default/objects/Account/fields/Pricing_tier__c.field-meta.xml
<CustomField>
    <fullName>Pricing_tier__c</fullName>
    <description>Wholesale price band the retailer buys on. Set by order volume and agreed terms.</description>
    <label>Pricing tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Preferred</fullName>
            </value>
            <value>
                <fullName>Key account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>