blueprints/wholesale-ecommerce-b2b/salesforce/force-app/main/default/objects/Account/fields/Reorder_cycle_days__c.field-meta.xml
<CustomField>
    <fullName>Reorder_cycle_days__c</fullName>
    <description>Usual days between orders for this retailer, often tied to a season. Compared with the last order date.</description>
    <label>Reorder cycle (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>