blueprints/wholesale-ecommerce-b2b/salesforce/force-app/main/default/objects/Account/fields/Retailer_type__c.field-meta.xml
<CustomField>
    <fullName>Retailer_type__c</fullName>
    <description>The kind of retailer. Used for pricing, assortment and reporting.</description>
    <label>Retailer type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Independent shop</fullName>
            </value>
            <value>
                <fullName>Small chain</fullName>
            </value>
            <value>
                <fullName>National chain</fullName>
            </value>
            <value>
                <fullName>Department store</fullName>
            </value>
            <value>
                <fullName>Online-only retailer</fullName>
            </value>
            <value>
                <fullName>Marketplace seller</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>