blueprints/wholesale-ecommerce-b2b/salesforce/force-app/main/default/objects/Account/fields/Store_count__c.field-meta.xml
<CustomField>
    <fullName>Store_count__c</fullName>
    <description>Number of physical shops. Used to size the opportunity and plan assortments.</description>
    <label>Store count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>