blueprints/wholesale-ecommerce-b2b/salesforce/force-app/main/default/objects/Account/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Puts each retailer in one territory so ownership and targets are clear.</description>
    <label>Territory</label>
    <referenceTo>Sales_Territory__c</referenceTo>
    <relationshipLabel>Retailers</relationshipLabel>
    <relationshipName>Retailers</relationshipName>
    <type>Lookup</type>
</CustomField>