blueprints/wholesale-ecommerce-b2b/salesforce/force-app/main/default/objects/Account/fields/Territory_owner__c.field-meta.xml
<CustomField>
    <fullName>Territory_owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The sales rep who looks after this retailer. Normally the rep of its territory.</description>
    <label>Account rep</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Companies Account rep</relationshipLabel>
    <relationshipName>Account_Territory_owner</relationshipName>
    <type>Lookup</type>
</CustomField>